# Toy

./: AST.cpp  AST.hpp  CMakeLists.txt  Logger.hpp  Scanner.hpp  example.toy  main.cpp  toy.l  toy.y
magic_enum/: magic_enum.hpp
